src/styles/components/header.scss
@import '../settings';
@import '../colours';
@import '../mixins';

.header,
.hero-header {
  display: flex;
  align-items: center;
  align-content: center;
  color: $colour-sky-white;
  padding: 0.5em 1em;
  background: linear-gradient(
    45deg,
    $colour-sapphire-blue,
    rgba($colour-sapphire-blue, 0.7),
    $colour-sapphire-blue,
    $colour-sapphire-blue
  );

  &.header--negative {
    justify-content: space-between;
    color: $colour-sapphire-blue;
    background: $colour-sky-white;

    a,
    a:link,
    a:visited,
    a:hover,
    a:active {
      color: $colour-sapphire-blue;
    }
  }

  a,
  a:link,
  a:visited,
  a:hover,
  a:active,
  button {
    color: $colour-sky-white;
  }

  .dropdown-menu {
    a,
    a:link,
    a:visited,
    a:hover,
    a:active {
      color: $colour-sapphire-blue;
    }
  }

  &__logo {
    display: inline-block;
  }

  &__navigation {
    list-style: none;
    display: inline-block;
    margin: 0;

    a:hover {
      border-bottom: 1px solid $colour-sky-white;
    }

    li {
      display: inline-block;
      margin: 0 0.7em;
    }
  }

  &__search {
    flex: 4 4 auto;
    input,
    button {
      margin: 0;
    }
  }
}

.hero-header {
  @include box-shadow();
  grid-area: hero-header;
  height: 60vh;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
  margin-bottom: 2em;

  .hero-header__title {
    display: flex;
    align-items: flex-end;
    flex: 2 1 auto;

    h1 {
      color: $colour-sky-white;
    }
  }

  .hero-header__content {
    flex: 2 1 auto;
    width: 90%;
  }

  .hero-header__footer {
    flex: 0 1 auto;
  }

  label {
    color: $colour-sky-white;
  }
}

