fix invisible dropdown on home page dropdown

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -35,8 +35,7 @@
   a:link,
   a:visited,
   a:hover,
-  a:active,
-  button {
+  a:active {
     color: $colour-sky-white;
   }
 
